# textr

./: README.md  pyproject.toml
examples/: 01_find_the_mimic.py  02_find_the_mimic_amulet.py  03_find_the_mimic_zapper.py
textr/: __init__.py  game.py  render.py
